--- a/deck-client/index.html
+++ b/deck-client/index.html
@@ -5,7 +5,12 @@
         <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
     </head>
     <body>
-        Game
+        <input id="message" type="text">
+        <button id="send" >Enviar</button>
+
+        <div style="width: 240px;">
+            <ul id="chat" style="list-style-type: none; padding-inline-start: 0px;"></ul>
+        </div>
         
         <script src="index.js"></script>
     </body>
